--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.ts",
   "scripts": {
     "dev": "tsx watch index.ts",
-    "start": "node dist/index.ts",
+    "start": "node dist/index.js",
     "build": "tsup index.ts",
     "test": "jest"
   },
