--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,6 +9,7 @@ pipelines:
             - node
           script:
             - apt-get update && apt-get install -y ssh
+            - echo "$SSH_PRIVATE_KEY" > id_rsa
             - chmod 600 id_rsa
             - ssh -i "$SSH_PRIVATE_KEY" -o StrictHostKeyChecking=no ubuntu@100.26.208.201 'bash -s' < deploy_script.sh
 
