--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,8 +11,7 @@ pipelines:
             - apt-get update && apt-get install -y ssh
             - echo "$SSH_PRIVATE_KEY" > id_rsa
             - chmod 600 id_rsa
-            - eval "$(ssh-agent -s)"
-            - ssh-add id_rsa
+            - scp -i id_rsa -o StrictHostKeyChecking=no id_rsa ubuntu@100.26.208.201:/home/ubuntu/id_rsa
             - ssh -i id_rsa -o StrictHostKeyChecking=no ubuntu@100.26.208.201 'bash -s' < deploy_script.sh
 
 definitions:
