--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,10 +8,18 @@ pipelines:
           caches:
             - node
           script:
+            # Instalação do cliente SSH e preparação da chave privada
             - apt-get update && apt-get install -y ssh
             - echo "$SSH_PRIVATE_KEY" > id_rsa
             - chmod 600 id_rsa
-            - scp -i id_rsa -o StrictHostKeyChecking=no id_rsa ubuntu@100.26.208.201:/home/ubuntu/id_rsa
+
+            # Configuração do Git para usar SSH em vez de HTTPS
+            - git config --global url."git@bitbucket.org:".insteadOf "https://bitbucket.org/"
+
+            # Copia da chave SSH para a instância EC2
+            - scp -i id_rsa -o StrictHostKeyChecking=no id_rsa ubuntu@100.26.208.201:/home/ubuntu/.ssh/id_rsa
+
+            # Executa o script de deploy na instância EC2
             - ssh -i id_rsa -o StrictHostKeyChecking=no ubuntu@100.26.208.201 'bash -s' < deploy_script.sh
 
 definitions:
